# Flappiest-Bird

./: CMakeLists.txt  FlappyBird-Info.plist  README.md  main.cpp
Flappy-Bird-Engine/: CMakeLists.txt
Flappy-Bird-Engine/include/Scenes/: ChangeNameScene.hpp  CreditScene.hpp  GameScene.hpp  HighScoreScene.hpp  InvadersScene.hpp  LoadingScene.hpp  MenuScene.hpp
Flappy-Bird-Engine/include/Sprites/: Bird.hpp  Enemy.hpp  Laser.hpp  Pipes.hpp  helperFunctions.hpp
Flappy-Bird-Engine/src/Scenes/: ChangeNameScene.cpp  CreditScene.cpp  GameScene.cpp  HighScoreScene.cpp  InvadersScene.cpp  LoadingScene.cpp  MenuScene.cpp
Flappy-Bird-Engine/src/Sprites/: Bird.cpp  Enemy.cpp  Laser.cpp  Pipes.cpp  helperFunctions.cpp
Resources/: FlappyBirdData.csv
Templates/: LoadingScene.hpp  MenuScene.hpp
